@@ -1,1 +1,1 @@
-ALTER TABLE `#__podcastmanager` CHANGE `itSummary` `description` varchar(5120) NOT NULL default '';
+ALTER TABLE `#__podcastmanager` CHANGE `itSummary` `itSummary` varchar(5120) NOT NULL default '';
